Removing java options for slave containers